# mlops_homework

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  example_env  mypy.ini  pyproject.toml  requirements.txt  run.sh  run_etl.py  run_experiments.py
configs/: config.json
docs/: mkdocs.yml
docs/docs/: index.md
etl_scripts/scripts/: download.py  process.py  upload.py
mlops_homework/: __init__.py  dataset.py  features.py  hello.py  pithonuachiy_script.py  plots.py  train_and_log_model.py
mlops_homework/modeling/: predict.py  train.py
